Set fixed height on entry pictures so that unloaded/broken ones don't affect caption positioning

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -264,6 +264,7 @@ span.twitter-typeahead .tt-menu {
 .entry-picture {
 	width: 100%;
 	max-width: 180px;
+	height: 140px;
 	border-radius: 8px 8px 0 0;
 }
 
